--- a/src/ui/common/Button.pug
+++ b/src/ui/common/Button.pug
@@ -52,6 +52,7 @@ style.
 			color wheat
 		&:disabled
 		&.disabled
+			cursor not-allowed
 			opacity 0.5
 		&.activated
 			background var(--c-con-strong)
