--- a/src/ui/common/MediaPlayer.pug
+++ b/src/ui/common/MediaPlayer.pug
@@ -89,7 +89,7 @@ style.
 		display none
 	video
 		background black
-		border-radius 1ch
+		border-radius 6px
 		:fullscreen &
 			border-radius 0
 			height 100% !important
@@ -124,7 +124,7 @@ style.
 	.media-player-video-hint-overlay
 		align-items center
 		background rgba(0,0,0,0.5)
-		border-radius 1ch
+		border-radius 6px
 		color white
 		display flex
 		justify-content center
