--- a/src/ui/feature/user/User.pug
+++ b/src/ui/feature/user/User.pug
@@ -41,16 +41,16 @@ style.
 		gap 30px
 		grid-template-columns 128px 1fr
 	.user-comment-list
-		display flex
-		flex-flow column nowrap
-		gap 1em
-		padding 6em 0
+		list-style none
+		padding 30px 0
 	.user-name
 		font-size 12pt
 	.user-trophies
 		display flex
 		flex-flow row wrap
 		gap 5px
+		list-style none
+		padding 0
 	.user-trophy
 		height 41px
 		width 41px
