--- a/src/ui/feature/user/UserAvatar.pug
+++ b/src/ui/feature/user/UserAvatar.pug
@@ -12,9 +12,6 @@ script.
 {#if img_url}
 	a(href='/u/{name}')
 		img.user-avatar(alt='' class='user-avatar-size-{size}' decoding='async' fetchpriority='low' loading='lazy' src={img_url})
-{:else if name != '[deleted]'}
-	a(href='/u/{name}')
-		.user-avatar.user-avatar-not-available(class='user-avatar-size-{size}')
 {:else}
 	.user-avatar.user-avatar-not-available(class='user-avatar-size-{size}')
 
@@ -25,9 +22,7 @@ style.
 		border-radius 999px
 		height 20px
 		user-select none
-		&:hover
+		&:hover:not(.user-avatar-not-available)
 			border-color wheat
-	.user-avatar-not-available
-		border 4px dashed var(--c-con-norm)
 	.user-avatar-size-large
 		height 128px
