--- a/src/ui/feature/post/Post.pug
+++ b/src/ui/feature/post/Post.pug
@@ -115,8 +115,8 @@ article.post
 								figure.post-gallery-item
 									a(href={media.image_url} rel='external noreferrer preconnect' target='_blank')
 										picture
-											source(srcset={media.image_url_960})
-											img.post-image.post-gallery-image(alt='image {index + 1} of {post.media.length} in gallery' src={media.image_url} style="aspect-ratio: {media.aspect_ratio}; width: {480 * Math.sqrt(media.aspect_ratio)}px")
+											source(srcset={media.image_url_640})
+											img.post-image(alt='image {index + 1} of {post.media.length} in gallery' src={media.image_url} style="aspect-ratio: {media.aspect_ratio}; width: {420 * Math.sqrt(media.aspect_ratio)}px")
 									{#if media.caption_text || media.caption_url}
 										figcaption.post-gallery-image-caption
 											{#if media.caption_text}
@@ -130,8 +130,8 @@ article.post
 							{:else if media.image_url}
 								a(href={media.image_url} rel='external noreferrer preconnect' target='_blank')
 									picture
-										source(srcset={media.image_url_960})
-										img.post-image(alt='' src={media.image_url} style="aspect-ratio: {media.aspect_ratio}; width: {480 * Math.sqrt(media.aspect_ratio)}px")
+										source(srcset={media.image_url_640})
+										img.post-image(alt='' src={media.image_url} style="aspect-ratio: {media.aspect_ratio}; width: {420 * Math.sqrt(media.aspect_ratio)}px")
 								menu.post-content-actions
 									Button(action={() => window.open(media.image_url)} key='e' text='Enlarge')
 				{:else if post.format === 'link'}
@@ -171,8 +171,6 @@ article.post
 			Button(action={() => history.back()} disabled={history.length < 2} key='Escape' text='')
 
 style.
-	.post-comments
-		margin-top 30px
 	.post-comments-actions
 		margin-top 2em
 	.post-comments-label
@@ -184,6 +182,7 @@ style.
 		align-items flex-start
 		display flex
 		flex-flow column nowrap
+		margin-bottom 30px
 		max-width 100%
 	.post-content-actions
 		display flex
@@ -211,35 +210,29 @@ style.
 		counter-reset gallery-index
 		display flex
 		flex-flow column nowrap
-		gap 1px
+		gap 2em
+		padding 0
 	.post-gallery-image-caption
 		color var(--c-text-weak)
 		font-size 11px
-		padding-left 3ch
-		margin-top 5px
-		&::before
-			content ''
-			left 0
-			position absolute
 	.post-gallery-item
 		display flex
 		flex-flow column nowrap
-		gap 3px
+		gap 6px
 		position relative
 		&::before
+			color var(--c-text-weak)
 			content counter(gallery-index)
 			counter-increment gallery-index
-			font-size 11px
 			line-height 1
 			position absolute
-			right calc(100% + 5px)
+			right calc(100% + 1em)
 	.post-iframe
 		aspect-ratio 16/9
-		border-radius 1ch
-		width 510px
+		border-radius 6px
+		width 560px
 	.post-image
-		border-radius 1ch
-		min-width 480px
+		border-radius 6px
 	.post-loading-message
 		padding 10px
 	.post-prediction-options > li
@@ -247,7 +240,6 @@ style.
 	.post-selftext
 		background rgba(255,255,255,0.1)
 		border-radius 10px
-		margin-top 20px
 		max-width 660px
 		padding 10px
 	.post-unavailable-reason
