--- a/src/ui/feature/post/PostCommentList.pug
+++ b/src/ui/feature/post/PostCommentList.pug
@@ -34,12 +34,11 @@ ol.post-comments-list
 	{#if post && profile_data_loaded}
 		{#each post.replies as reply_short_id}
 			PostComment(short_id={reply_short_id})
-		{:else}
-			p [No comments to show.]
 		{#if post.num_more_replies > 0}
 			.post-more-replies
 				Button(action={() => api.load(post.more_replies_id)} loading={more_replies_loading} text="{post.num_more_replies} {post.num_more_replies === 1 ? 'reply' : 'replies'}")
 
 style.
 	.post-comments-list
-		margin-top 2em
+		list-style none
+		padding 0
