--- a/src/ui/app/stylesheet.styl
+++ b/src/ui/app/stylesheet.styl
@@ -61,13 +61,11 @@ ul
 	padding-inline-start 3ch
 	& ul
 		list-style-type initial
-ol ol
-ol ul
-ul ol
-ul ul
-	margin 0 0 0.25em
 li
 	margin 0 0 0.25em
+	> ol
+	> ul
+		margin 0 0 0.25em
 menu
 	padding 0
 
