listing: work on post headline layout; various

--- a/src/ui/app/stylesheet.styl
+++ b/src/ui/app/stylesheet.styl
@@ -19,8 +19,8 @@
 	--color-paper-border gainsboro
 	--color-writing-action mediumslateblue
 	--typeface-mono 'Roboto Mono', 'Cascadia Mono', 'Consolas', monospace
+b
 strong
-	font-weight 600
 	letter-spacing 0.015em
 .color-strategy-black-text
 	color-scheme light
@@ -31,6 +31,9 @@ strong
 	--c-text-faint rgba(0,0,0,0.25)
 	--c-text-weak rgba(0,0,0,0.50)
 	--c-text-strong black
+	b
+	strong
+		font-weight 640
 .color-strategy-white-text
 	color-scheme dark
 	font-weight 340
@@ -41,6 +44,9 @@ strong
 	--c-text-faint rgba(255,255,255,0.25)
 	--c-text-weak rgba(255,255,255,0.50)
 	--c-text-strong #f2f4f7
+	b
+	strong
+		font-weight 580
 *::-webkit-scrollbar
 	background var(--c-con-weak)
 *::-webkit-scrollbar-thumb
