--- a/src/ui/feature/post/PostFlair.pug
+++ b/src/ui/feature/post/PostFlair.pug
@@ -21,11 +21,11 @@ span.post-flair(style="background-color: {color || 'white'}; color: {(new Color(
 style.
 	.post-flair
 		align-items center
-		border-radius 6px
+		border-radius 1em
 		display inline-flex
-		font-size 12px
+		font-size 13px
 		gap 3px
-		padding 2px 6px
+		padding 1px 1ch
 		user-select none
 		white-space pre
 	.post-flair-emoji
